--- a/client/main.css
+++ b/client/main.css
@@ -108,16 +108,27 @@ nav{
     border: none;
 }
 
+.collection-normal{
+    color: #333333 !important;
+}
+.collection-normal:active, .collection .collection-item.active{
+    background-color: #333333 !important;
+    color: white !important;
+
+}
 .noUi-handle{
-    width:40px!important;
+    width:70px!important;
+    height:50px !important;
     left:50%!important;
-    border-radius: 20px!important;
-    margin-left: -20px!important;
+    border-radius: 35px!important;
+    margin-left: -35px!important;
+    margin-top: -5px!important;
 }
 .noUi-handle:before, .noUi-handle:after{
     width: 30px!important;
     left: 50%!important;
     margin-left: -15px!important;
+    margin-top: 5px !important;
 }
 .noUi-origin{
     width:100%!important;
@@ -143,6 +154,16 @@ nav{
     margin-top: -40px;
     color:#fff;
     font-size: 80px !important;
+}
+.question-value
+{
+    position: absolute;
+    width:100%;
+    text-align: center;
+    height:40px;
+    line-height: 40px;
+    top:50%;
+    margin-top: -20px;
 }
 .questionHeader
 {
