--- a/imports/ui/components/profile/profile.html
+++ b/imports/ui/components/profile/profile.html
@@ -3,8 +3,8 @@
         <div class="row">
             <div class="col m4 s12">
                 <div class="collection" style="margin: 0;">
-                    <a class="collection-item black-text"
-                       ng-repeat="category in $ctrl.categories" ng-click="$ctrl.setCategory(category)" style="cursor: pointer">{{category.category}}</a>
+                    <a class="collection-item collection-normal"
+                       ng-repeat="category in $ctrl.categories" ng-class="{'active':$ctrl.isActive(category)}" ng-click="$ctrl.setCategory(category)" style="cursor: pointer">{{category.category}}</a>
                 </div>
             </div>
             <div class="col m8 s12">
