--- a/imports/ui/components/admin.evaluation/admin.evaluation.html
+++ b/imports/ui/components/admin.evaluation/admin.evaluation.html
@@ -4,7 +4,7 @@
             <li class="collection-header"><h4>Evaluierung</h4>
             <h5>{{$ctrl.user.emails[0].address}}</h5></li>
             <li class="collection-item">
-                {{user}}
+                <canvas id="chart" width="400" height="400"></canvas>
             </li>
         </ul>
     </div>
