--- a/imports/ui/components/admin.users/admin.users.html
+++ b/imports/ui/components/admin.users/admin.users.html
@@ -1,6 +1,14 @@
 <div class="container">
     <div class="section">
         <ul class="collection with-header">
+            <li class="collection-header"><h4>Durchschnitt</h4></li>
+            <li class="collection-item">
+                <canvas id="chart-average">
+
+                </canvas>
+            </li>
+        </ul>
+        <ul class="collection with-header">
             <li class="collection-header"><h4>Users</h4></li>
             <li class="collection-item" ng-repeat="user in $ctrl.users">
                 <div class="row">
