--- a/imports/ui/components/admin.evaluation/admin.evaluation.html
+++ b/imports/ui/components/admin.evaluation/admin.evaluation.html
@@ -2,7 +2,7 @@
     <div class="section">
         <ul class="collection with-header">
             <li class="collection-header"><h4>Evaluierung</h4>
-            <h5>{{$ctrl.user.emails[0].address}}</h5></li>
+            <h5>{{$ctrl.user._id}}</h5></li>
             <li class="collection-item">
                 <canvas id="chart-holder">
 
