--- a/imports/ui/components/admin.users/admin.users.html
+++ b/imports/ui/components/admin.users/admin.users.html
@@ -1,19 +1,11 @@
 <div class="container">
     <div class="section">
         <ul class="collection with-header">
-            <li class="collection-header"><h4>Durchschnitt</h4></li>
-            <li class="collection-item">
-                <canvas id="chart-average">
-
-                </canvas>
-            </li>
-        </ul>
-        <ul class="collection with-header">
             <li class="collection-header"><h4>Users</h4></li>
             <li class="collection-item" ng-repeat="user in $ctrl.users">
                 <div class="row">
                     <div class="col s8 m10 l10">
-                        {{user.emails[0].address}}
+                        {{user._id}}
                     </div>
                     <div class="col s4 m2 l2 center-align">
                         <button class="btn btn-large" ng-click="$ctrl.view(user)">
