--- a/imports/ui/components/navigation/nav.html
+++ b/imports/ui/components/navigation/nav.html
@@ -8,7 +8,7 @@
             <li ng-show="$ctrl.hasRoleAdmin()"><a ui-sref="admin-category">Kategorie</a></li>
             <li ng-show="$ctrl.hasRoleAdmin()"><a ui-sref="admin-users">Users</a></li>
             <li ng-show="$ctrl.hasRoleAdmin()"><a ui-sref="admin-characteristic">Charakteristik</a></li>
-            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="play">Spielen</a></li>
+            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="play">Fragebogen beantworten</a></li>
             <li ng-show="$ctrl.isLoggedIn"><a ui-sref="profile">Profil</a></li>
             <li ng-show="$ctrl.isLoggedIn"><a ui-sref="login" ng-click="$ctrl.logout()">Logout</a></li>
             <li ng-show="!$ctrl.isLoggedIn"><a ui-sref="register">Register</a></li>
@@ -22,7 +22,7 @@
             <li ng-show="$ctrl.hasRoleAdmin()"><a ui-sref="admin-category">Kategorie</a></li>
             <li ng-show="$ctrl.hasRoleAdmin()"><a ui-sref="admin-users">Users</a></li>
             <li ng-show="$ctrl.hasRoleAdmin()"><a ui-sref="admin-characteristic">Charakteristik</a></li>
-            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="play">Spielen</a></li>
+            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="play">Fragebogen beantworten</a></li>
             <li ng-show="$ctrl.isLoggedIn"><a ui-sref="profile">Profil</a></li>
             <li ng-show="$ctrl.isLoggedIn"><a ng-click="$ctrl.logout()">Logout</a></li>
             <li ng-show="!$ctrl.isLoggedIn"><a ui-sref="register">Register</a></li>
