--- a/imports/ui/components/register/register.html
+++ b/imports/ui/components/register/register.html
@@ -3,6 +3,16 @@
         <div class="row">
             <div class="input-field col s12"><input placeholder="Email" ng-model="$ctrl.credentials.email" class="input-login validate" type="email"></div>
             <div class="input-field col s12"><input placeholder="Password" ng-model="$ctrl.credentials.password" class="input-login validate" type="password"></div>
+            <div class="input-field col s6">
+                <select class="input-login">
+                    <option value="" disabled selected>Geschlecht</option>
+                    <option value="1">Weiblich</option>
+                    <option value="2">Männlich</option>
+                </select>
+            </div>
+
+                <input class="datepicker" type="date">
+
             <div class="input-field col s12"><input type="submit" value="Registrieren" class="waves-effect waves-light btn-large btn-login" style="width:100%;"/></div>
         </div>
     </form>
