--- a/imports/ui/components/login/login.html
+++ b/imports/ui/components/login/login.html
@@ -4,8 +4,8 @@
             <div class="input-field col s12"><input placeholder="Email" ng-model="$ctrl.credentials.email" class="input-login validate" type="email"></div>
             <div class="input-field col s12"><input placeholder="Password" ng-model="$ctrl.credentials.password" class="input-login validate" type="password"></div>
             <div class="input-field col s12"><input type="submit" value="Login" class="waves-effect waves-light btn-large btn-login" style="width:100%;"/></div>
-            <div class="input-field col s12"><a ui-sref="register" class="waves-effect waves-light btn-flat white-text" style="width:100%;">Registrieren</a></div>
-            <div class="input-field col s12"><a ui-sref="forgotpw" class="waves-effect waves-light btn-flat white-text" style="width:100%;">Passwort vergessen</a></div>
+            <div class="input-field col s12"><a ui-sref="register" class="waves-effect waves-light btn-flat-custom white-text" style="width:100%;">Registrieren</a></div>
+            <div class="input-field col s12"><a ui-sref="forgotpw" class="waves-effect waves-light btn-flat-custom white-text" style="width:100%;">Passwort vergessen</a></div>
 
         </div>
     </form>
