--- a/imports/ui/components/admin.users/admin.users.html
+++ b/imports/ui/components/admin.users/admin.users.html
@@ -14,6 +14,7 @@
                 <div class="row">
                     <div class="col s8 m10 l10">
                         {{user.emails[0].address}}
+                        {{user}}
                     </div>
                     <div class="col s4 m2 l2 center-align">
                         <button class="btn btn-large" ng-click="$ctrl.view(user)">
