--- a/imports/ui/components/register/register.html
+++ b/imports/ui/components/register/register.html
@@ -4,10 +4,17 @@
         <div class="row">
             <div class="input-field col s12"><input placeholder="Email" ng-model="$ctrl.credentials.email"
                                                     class="input-login validate" type="email"></div>
+
+            <div class="input-field col s12"><input placeholder="Vorname" ng-model="$ctrl.credentials.personal.firstname"
+                                                    class="input-login validate" type="text"></div>
+
+            <div class="input-field col s12"><input placeholder="Nachname" ng-model="$ctrl.credentials.personal.lastname"
+                                                    class="input-login validate" type="text"></div>
+
             <div class="input-field col s12"><input placeholder="Password" ng-model="$ctrl.credentials.password"
                                                     class="input-login validate" type="password"></div>
             <div class="input-field col s12 m4">
-                <select class="input-login" ng-model="$ctrl.credentials.test.gender">
+                <select class="input-login" ng-model="$ctrl.credentials.personal.gender">
                     <option value="" disabled selected>Geschlecht</option>
                     <option value="Weiblich">Weiblich</option>
                     <option value="Männlich">Männlich</option>
@@ -15,13 +22,14 @@
             </div>
 
             <div class="input-field col s12 m8">
-                <input type="checkbox" ng-model="$ctrl.credentials.test.leader" id="leader" />
+                <input type="checkbox" ng-model="$ctrl.credentials.personal.leader" id="leader" />
                 <label for="leader" class="switch-title">Führungsverantwortung</label>
             </div>
             <div class="input-field col s12">
-                <input ng-model="$ctrl.credentials.test.birth" class="datepicker input-login validate" type="text">
+                <input ng-model="$ctrl.credentials.personal.birth" class="datepicker input-login" type="text">
+
             </div>
-            <div class="input-field col s12"><input placeholder="Beruf" ng-model="$ctrl.credentials.test.job"
+            <div class="input-field col s12"><input placeholder="Beruf" ng-model="$ctrl.credentials.personal.job"
                                                     class="input-login validate" type="text"></div>
             <div class="input-field col s12">
                 <input type="submit" value="Registrieren"
