--- a/imports/ui/components/navigation/nav.html
+++ b/imports/ui/components/navigation/nav.html
@@ -11,7 +11,7 @@
             <li ng-show="$ctrl.hasRoleAdmin()"><a ui-sref="admin-bubble">Bubble</a></li>
             <li ng-show="$ctrl.hasRoleAdmin()"><a ui-sref="admin-fokus">Fokus</a></li>
             <li ng-show="$ctrl.hasRoleAdmin()"><a ui-sref="admin-energietyp">Energie Typ</a></li>
-            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="play">Spielen</a></li>
+            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="answer-question">Spielen</a></li>
             <li ng-show="$ctrl.isLoggedIn"><a ui-sref="profile">Profil</a></li>
             <li ng-show="$ctrl.isLoggedIn"><a ui-sref="login" ng-click="$ctrl.logout()">Logout</a></li>
             <li ng-show="!$ctrl.isLoggedIn"><a ui-sref="register">Register</a></li>
@@ -28,7 +28,7 @@
             <li ng-show="$ctrl.hasRoleAdmin()"><a ui-sref="admin-bubble">Bubble</a></li>
             <li ng-show="$ctrl.hasRoleAdmin()"><a ui-sref="admin-fokus">Fokus</a></li>
             <li ng-show="$ctrl.hasRoleAdmin()"><a ui-sref="admin-energietyp">Energie Typ</a></li>
-            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="play">Spielen</a></li>
+            <li ng-show="$ctrl.isLoggedIn"><a ui-sref="answer-question">Spielen</a></li>
             <li ng-show="$ctrl.isLoggedIn"><a ui-sref="profile">Profil</a></li>
             <li ng-show="$ctrl.isLoggedIn"><a ng-click="$ctrl.logout()">Logout</a></li>
             <li ng-show="!$ctrl.isLoggedIn"><a ui-sref="register">Register</a></li>
