--- a/imports/ui/components/admin.cluster/admin.cluster.html
+++ b/imports/ui/components/admin.cluster/admin.cluster.html
@@ -7,7 +7,7 @@
                     <div class="input-field row">
                         <input class="input-normal col s8 m10 l10" placeholder="Cluster"
                                ng-model="$ctrl.newCluster" ng-required="true">
-                        <div class="s4 m2 l2 center-align">
+                        <div class="col s4 m2 l2 center-align">
                             <button class="btn btn-large" type="submit">
                                 <i class="material-icons">note_add</i>
                             </button>
@@ -25,7 +25,7 @@
                     <div class="input-field row">
                         <input class="input-normal col s8 m10 l10" placeholder="Cluster"
                                ng-model="cluster.cluster" ng-change="$ctrl.update(cluster)">
-                        <div class="s4 m2 l2 center-align">
+                        <div class="col s4 m2 l2 center-align">
                             <button class="btn btn-large"
                                     ng-click="$ctrl.remove(cluster)">
                                 <i class="material-icons">delete</i>
