--- a/imports/ui/components/admin.bubble/admin.bubble.html
+++ b/imports/ui/components/admin.bubble/admin.bubble.html
@@ -12,7 +12,7 @@
                             </select>
                             <label>Cluster</label>
                         </div>
-                        <div class="s4 m2 l2 center-align">
+                        <div class="col s4 m2 l2 center-align">
                             <button class="btn btn-large" type="submit">
                                 <i class="material-icons">note_add</i>
                             </button>
@@ -34,7 +34,7 @@
                             </select>
                             <label>Cluster</label>
                         </div>
-                        <div class="s4 m2 l2 center-align">
+                        <div class="col s4 m2 l2 center-align">
                             <button class="btn btn-large"
                                     ng-click="$ctrl.remove(bubble)">
                                 <i class="material-icons">delete</i>
