--- a/imports/ui/components/admin.energietyp/admin.energietyp.html
+++ b/imports/ui/components/admin.energietyp/admin.energietyp.html
@@ -7,7 +7,7 @@
                     <div class="input-field row">
                         <input class="input-normal col s8 m10 l10" placeholder="Energie Typ"
                                ng-model="$ctrl.newEnergietyp" ng-required="true">
-                        <div class="s4 m2 l2 center-align">
+                        <div class="col s4 m2 l2 center-align">
                             <button class="btn btn-large" type="submit">
                                 <i class="material-icons">note_add</i>
                             </button>
@@ -25,7 +25,7 @@
                     <div class="input-field row">
                         <input class="input-normal col s8 m10 l10" placeholder="Energie Typ"
                                ng-model="energietyp.energietyp" ng-change="$ctrl.update(energietyp)">
-                        <div class="s4 m2 l2 center-align">
+                        <div class="col s4 m2 l2 center-align">
                             <button class="btn btn-large"
                                     ng-click="$ctrl.remove(energietyp)">
                                 <i class="material-icons">delete</i>
