--- a/imports/ui/components/register/register.html
+++ b/imports/ui/components/register/register.html
@@ -1,41 +1,87 @@
 <div class="container login-container row">
-    <form class="col offset-m3 m6 offset-s1 s10" name="register" ng-submit="register.$valid && $ctrl.register()"
+    <form class="col offset-m3 m6 offset-s1 s10" name="register"
           novalidate>
         <div class="row">
             <div class="input-field col s12"><input placeholder="Email" ng-model="$ctrl.credentials.email"
-                                                    class="input-login validate" type="email"></div>
+                                                    class="input-login validate" type="email" ng-required="true"></div>
 
-            <div class="input-field col s12"><input placeholder="Vorname" ng-model="$ctrl.credentials.personal.firstname"
-                                                    class="input-login validate" type="text"></div>
+            <div class="input-field col s12"><input placeholder="Vorname"
+                                                    ng-model="$ctrl.credentials.personal.firstname"
+                                                    class="input-login validate" type="text" ng-required="true"></div>
 
-            <div class="input-field col s12"><input placeholder="Nachname" ng-model="$ctrl.credentials.personal.lastname"
-                                                    class="input-login validate" type="text"></div>
+            <div class="input-field col s12"><input placeholder="Nachname"
+                                                    ng-model="$ctrl.credentials.personal.lastname"
+                                                    class="input-login validate" type="text" ng-required="true"></div>
 
             <div class="input-field col s12"><input placeholder="Password" ng-model="$ctrl.credentials.password"
-                                                    class="input-login validate" type="password"></div>
+                                                    class="input-login validate" type="password" ng-required="true">
+            </div>
             <div class="input-field col s12 m4">
-                <select class="input-login" ng-model="$ctrl.credentials.personal.gender">
-                    <option value="" disabled selected>Geschlecht</option>
-                    <option value="Weiblich">Weiblich</option>
-                    <option value="Männlich">Männlich</option>
+                <select class="input-login" ng-options="gender for gender in $ctrl.genders"
+                        ng-model="$ctrl.credentials.personal.gender" ng-required="true">
                 </select>
+                <label>Geschlecht</label>
             </div>
 
             <div class="input-field col s12 m8">
-                <input type="checkbox" ng-model="$ctrl.credentials.personal.leader" id="leader" />
+                <input type="checkbox" ng-model="$ctrl.credentials.personal.leader" id="leader"/>
                 <label for="leader" class="switch-title">Führungsverantwortung</label>
             </div>
             <div class="input-field col s12">
-                <input ng-model="$ctrl.credentials.personal.birth" class="datepicker input-login" type="text">
+                <input placeholder="Geburtstag" ng-model="$ctrl.credentials.personal.birth"
+                       class="datepicker input-login" type="text" ng-required="true">
 
             </div>
             <div class="input-field col s12"><input placeholder="Beruf" ng-model="$ctrl.credentials.personal.job"
-                                                    class="input-login validate" type="text"></div>
+                                                    class="input-login validate" type="text" ng-required="true"></div>
+
+            <div class="input-field col m8 m9 l9">
+                <select class="input-login" ng-options="institut._id as institut.institut for institut in $ctrl.instituts"
+                        ng-model="$ctrl.credentials.personal.institutId" ng-required="true">
+                </select>
+                <label>Institut</label>
+            </div>
+            <div class="col s4 m3 l3 center-align">
+                <a class="btn btn-large" href="#modal1">
+                    <i class="material-icons">note_add</i>
+                </a>
+            </div>
+
             <div class="input-field col s12">
-                <input type="submit" value="Registrieren"
+                <button type="submit" ng-click="register.$valid && $ctrl.register()"
                        class="waves-effect waves-light btn-large btn-login"
-                       style="width:100%;"/>
+                        style="width:100%;">Registrieren</button>
             </div>
         </div>
     </form>
+</div>
+
+<!-- Modal Structure -->
+<div id="modal1" class="modal">
+    <div class="modal-content">
+        <h4>Neues Institut/Gruppe</h4>
+        <div class="row">
+            <form class="col offset-m3 m6 offset-s1 s10" name="group"
+                  novalidate>
+                <div class="input-field col s12"><input placeholder="Name" ng-model="$ctrl.institut.institut"
+                                                        class="input-normal validate" type="text" ng-required="true">
+                </div>
+
+                <div class="input-field col s12"><input placeholder="Branche" ng-model="$ctrl.institut.branche"
+                                                        class="input-normal validate" type="text" ng-required="true">
+                </div>
+                <div class="input-field col s12"><input placeholder="Region" ng-model="$ctrl.institut.region"
+                                                        class="input-normal validate" type="text" ng-required="true">
+                </div>
+                <div class="input-field col s12">
+                    <button ng-click="group.$valid && $ctrl.addInstitut($ctrl.institut)"
+                           class="waves-effect waves-light btn-large btn-login"
+                            style="width:100%;">Hinzufügen</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <a href="#!" class="modal-action modal-close waves-effect btn-flat">Abbrechen</a>
+    </div>
 </div>
