--- a/imports/ui/components/login/login.html
+++ b/imports/ui/components/login/login.html
@@ -1,9 +1,11 @@
 <div class="container login-container row">
-    <form class="col offset-m3 m6 offset-s1 s10" name="login" ng-submit="login.$valid && $ctrl.login()" novalidate>
+    <form class="col offset-m3 m6 offset-s1 s10" name="login" novalidate>
         <div class="row">
-            <div class="input-field col s12"><input placeholder="Email" ng-model="$ctrl.credentials.email" class="input-login validate" type="email"></div>
-            <div class="input-field col s12"><input placeholder="Password" ng-model="$ctrl.credentials.password" class="input-login validate" type="password"></div>
-            <div class="input-field col s12"><input type="submit" value="Login" class="waves-effect waves-light btn-large btn-login" style="width:100%;"/></div>
+            <div class="input-field col s12"><input placeholder="Email" ng-model="$ctrl.credentials.email" ng-required="true" class="input-login validate" type="email"></div>
+            <div class="input-field col s12"><input placeholder="Password" ng-model="$ctrl.credentials.password" ng-required="true" class="input-login validate" type="password"></div>
+            <div class="input-field col s12">
+                <button value="Login" class="waves-effect waves-light btn-large btn-login" ng-click="login.$valid && $ctrl.login()" style="width:100%;">Login</button>
+            </div>
             <div class="input-field col s12"><a ui-sref="register" class="waves-effect waves-light btn-flat-custom white-text" style="width:100%;">Registrieren</a></div>
             <div class="input-field col s12"><a ui-sref="forgotpw" class="waves-effect waves-light btn-flat-custom white-text" style="width:100%;">Passwort vergessen</a></div>
 
