--- a/imports/ui/components/navigation/nav.html
+++ b/imports/ui/components/navigation/nav.html
@@ -1,6 +1,6 @@
 <nav role="navigation">
     <div class="nav-wrapper container">
-        <!--<img id="logo-container" ui-sref="login" class="brand-logo right" src="images/logo-beshiro-byline-2000.svg"/>-->
+        <img height="60px" id="logo-container" ui-sref="login" class="brand-logo right" src="images/logo-beshiro-byline.svg"/>
         <ul class="left hide-on-med-and-down">
             <li>
                 <a ng-show="$ctrl.isLoggedIn">{{ $ctrl.currentUser.emails[0].address }}</a>
